# MAI_OOP_hometasks

MAI_OOP_hometask_1/: .gitignore  CMakeLists.txt  README.md  functions.cpp  functions.hpp  main.cpp  tests.cpp
MAI_OOP_hometask_2/: .gitignore  CMakeLists.txt  README.md  five.hpp  five_algebra_operators.cpp  five_bool_operators.cpp  five_constructors.cpp  five_gets.cpp  five_private.cpp  main.cpp  tests.cpp
MAI_OOP_hometask_3/: .gitignore  CMakeLists.txt  README.md  eight_angles.cpp  eight_angles.hpp  figure.hpp  five_angles.cpp  five_angles.hpp  main.cpp  mass.cpp  mass.hpp  six_angles.cpp  six_angles.hpp  tests.cpp
MAI_OOP_hometask_4/: CMakeLists.txt  README.md  eight_angles.hpp  figure.hpp  five_angles.hpp  functions.hpp  main.cpp  mass.hpp  six_angles.hpp  tests.cpp
MAI_OOP_hometask_5/: CMakeLists.txt  README.md  allocator.hpp  main.cpp  tests.cpp  vector.hpp
MAI_OOP_hometask_6/: CMakeLists.txt  NPC.cpp  README.md  bear.cpp  elf.cpp  factory.cpp  main.cpp  observer.cpp  test.cpp  thug.cpp
MAI_OOP_hometask_7/: CMakeLists.txt  README.md  bear.cpp  elf.cpp  test.cpp  thug.cpp
